Review, comments done

--- a/Model/appsettings.json
+++ b/Model/appsettings.json
@@ -3,3 +3,29 @@
     "EFCoreTest": "Server=(localdb)\\MSSQLLocalDB;Database=EFCoreTest;Trusted_Connection=True;MultipleActiveResultSets=True"
   }
 }
+/*Đoạn mã trên là một chuỗi kết nối (connection string) được cấu hình trong tệp cấu hình của ứng dụng 
+  (ví dụ: tệp appsettings.json trong một dự án .NET Core hoặc tệp web.config trong một dự án ASP.NET).
+
+Chuỗi kết nối này định nghĩa các thông tin cần thiết để kết nối đến cơ sở dữ liệu. 
+Trong trường hợp này, chuỗi kết nối có tên EFCoreTest và chứa các thông tin sau:
+
+- Server=(localdb)\\MSSQLLocalDB: Đây là tên máy chủ cơ sở dữ liệu, trong trường hợp này là (localdb) 
+và tên đăng nhập của dịch vụ cơ sở dữ liệu SQL Server LocalDB là MSSQLLocalDB. 
+Đây là một phiên bản nhỏ gọn của SQL Server chạy trên cùng máy tính đang phát triển ứng dụng, 
+thường được sử dụng để phát triển và kiểm thử các ứng dụng đang sử dụng Entity Framework Core.
+
+- Database=EFCoreTest: Đây là tên của cơ sở dữ liệu sẽ được sử dụng hoặc tạo ra nếu chưa tồn tại. 
+Trong trường hợp này, cơ sở dữ liệu có tên là EFCoreTest.
+
+- Trusted_Connection=True: Đây là cách xác thực đến cơ sở dữ liệu, 
+trong trường hợp này sử dụng xác thực đáng tin cậy (trusted connection). 
+Điều này đồng nghĩa với việc sẽ sử dụng thông tin đăng nhập của người dùng 
+đang đăng nhập vào hệ thống để kết nối đến cơ sở dữ liệu.
+
+- MultipleActiveResultSets=True: Đây là cờ cho phép sử dụng nhiều tập kết quả hoạt động đồng thời. 
+Cờ này được sử dụng khi sử dụng tính năng của Entity Framework Core liên quan đến kiểm soát số lượng 
+tập kết quả được hoạt động đồng thời trong một kết nối.
+
+
+
+*/
